Changes: removed the Z madness. The searchbar clear, delete and search functions are really dodgy in this version

--- a/src/res.qrc
+++ b/src/res.qrc
@@ -12,5 +12,6 @@
         <file>qml/UIConstants.js</file>
         <file>data/icon-m-toolbar-save-image.svg</file>
         <file>data/searchbar-search-tags.svg</file>
+        <file>data/searchbar-clear-tags.svg</file>
     </qresource>
 </RCC>
