--- a/src/res.qrc
+++ b/src/res.qrc
@@ -13,5 +13,6 @@
         <file>data/icon-m-toolbar-save-image.svg</file>
         <file>data/searchbar-search-tags.svg</file>
         <file>data/searchbar-clear-tags.svg</file>
+        <file>data/title-logo.svg</file>
     </qresource>
 </RCC>
