--- a/src/res.qrc
+++ b/src/res.qrc
@@ -14,5 +14,6 @@
         <file>data/icons-Applications-flickr.png</file>
         <file>data/searchbar-search-tags.png</file>
         <file>data/searchbar-clear-tags.png</file>
+        <file>data/title-logo.png</file>
     </qresource>
 </RCC>
